test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_field_selection.draco
proc main() void : a := a.fld; corp;

