test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_make_as_identifier.draco
int make;
 
proc main() void : a := 1; corp;
